Backend completed with API end points and same sample DB

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: backend_production
-  username: backend
-  password: <%= ENV["BACKEND_DATABASE_PASSWORD"] %>
+  url: <%= ENV["MY_APP_DATABASE_URL"] %>
+  # database: backend_production
+  # username: backend
+  # password: <%= ENV["BACKEND_DATABASE_PASSWORD"] %>
